--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,40 @@
 {
-    "overview": "Overview"
+    "overview": "Overview",
+    "activity_feed": "Activity Feed",
+    "advisory_council_members": "Advisory Council Members",
+    "waiting_for_block_confirmation": "Waiting for Block Confirmation",
+    "usually_its_done_within_a_few_seconds": "Usually its done within a few seconds",
+    "all_referenda": "All Referenda",
+    "alliance": "Alliance",
+    "alliance_desc": "The Alliance Pallet provides a collective that curates a list of accounts and URLs, deemed by the voting members to be unscrupulous actors. The Alliance provides a set of ethics against bad behavior and provides recognition and influence for those teams that contribute something back to the ecosystem.",
+    "announcement": "Announcement",
+    "alliance_motions": "Alliance Motions",
+    "motions_desc": "This is the place to discuss on-chain motions. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "motions": "Motions",
+    "astrals_scoresheet": "Astrals Scoresheet",
+    "see_how_you_can_earn_more_points": "See how you can earn more points!",
+    "cart_page": "Cart Page",
+    "copy_page_link": "Copy Page Link",
+    "back_to_bounties": "Back to Bounties",
+    "on_chain_bounties": "On Chain Bounties",
+    "on_chain_child_bounties": "On Chain Child Bounties",
+    "bounties_desc": "This is the place to discuss on-chain bounties. Bounty posts are automatically generated as soon as they are created on-chain. Only the proposer is able to edit them.",
+    "child_bounties_desc": "This is the place to discuss on-chain child bounties. Child Bounty posts are automatically generated as soon as they are created on-chain. Only the proposer is able to edit them.",
+    "back_to_bounty_dashboard": "Back to Bounty Dashboard",
+    "404": "404",
+    "post_not_found": "Post not found. If you just created a post, it might take up to a minute to appear.",
+    "on-chain_upgrade_PIPs": "On-chain Upgrade PIPs",
+    "PIPs_desc": "This is the place to discuss on-chain Upgrade PIPs. Upgrade Committee PIPs are proposed by the Upgrade Committee and approved by the Polymesh Governance Council. Only the Upgrade Committee can amend these PIPs",
+    "on_chain_community_pips": "On-chain Community PIPs",
+    "on_chain_community_pips_desc": "This is the place to discuss on-chain Community PIPs. Community PIPs are proposed by the Community and approved by the Polymesh Governance Council. Only the Community can amend these PIPs",
+    "council": "Council",
+    "council_desc": "Council is the body of elected members that consists of several on-chain accounts. The Council can act as a representative for passive (non-voting) stakeholders. Council members have two main tasks: proposing referenda for the overall stakeholder group to vote on and cancelling malicious referenda.",
+    "latest_discussions": "Latest Discussions",
+    "add_post": "Add Post",
+    "discussion_desc": "Discussions is a space for the community to engage in meaningful conversations around on-chain proposals. It’s a space to share insights, provide feedback, and collaborate on ideas that impact the network. On-chain posts are automatically generated as soon as a proposal is created, and only the proposer can edit the original details. Join the conversation and help shape the future of the ecosystem.",
+    "fellowship": "Fellowship",
+    "fellowship_desc": "Fellowship is a mostly self-governing expert body with a primary goal of representing the humans who embody and contain the technical knowledge base of the Polkadot network and protocol.",
+    "governance_analytics": "Governance Analytics",
+    "gov_Analytics_desc": "All active and history referenda of various tracks."
+
 }
