fix: added hardcoded strings to json

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -47,6 +47,47 @@
     "open_tech_committee_members": "Open Tech Committee Members",
     "open_tech_committee_desc": "Open Tech Committee Members is a mostly self-governing expert body with a primary goal of representing the humans who embody and contain the technical knowledge base of the Polkadot network and protocol.",
     "on_chain_motions": "On Chain Motions",
-    "on_chain_motions_desc": "This is the place to discuss on-chain motions. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them."
+    "on_chain_motions_desc": "This is the place to discuss on-chain motions. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "on_chain_proposals": "On Chain Proposals",
+    "on_chain_proposals_desc": "This is the place to discuss on-chain proposals. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "on_chain_referenda": "On Chain Referenda",
+    "on_chain_referenda_desc": "This is the place to discuss on-chain referenda. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "news": "News",
+    "notifications": "Notifications",
+    "please": "Please",
+    "login": "login",
+    "to_use_notifications": "to use notifications",
+    "please_enable_notifications_via": "Please enable notifications via",
+    "settings": "settings",
+    "page": "page",
+    "polkadot_and_Kusama_ecosystem_and_directory": "Polkadot and Kusama ecosystem and directory",
+    "projects": "Projects",
+    "preimage": "Preimage",
+    "show_All": "Show All",
+    "request_password_reset": "Request Password Reset",
+    "email": "Email",
+    "set_new_password": "Set new password",
+    "new_password": "New Password",
+    "password_reset_token_and_or_userId_missing": "Password reset token and/or userId missing",
+    "please_login_to_change_settings": "Please login to change settings",
+    "tech_committee_proposals": "Tech Committee Proposals",
+    "tech_committee_proposals_desc": "This is the place to discuss on-chain technical committee proposals. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "on_chain_tech_committee_pips": "On-chain Technical Committee PIPs",
+    "on_chain_tech_committee_pips_desc": "This is the place to discuss on-chain Technical PIPs. Technical Committee PIPs are proposed by the Technical Committee and approved by the Polymesh Governance Council. Only the Technical Committee can amend these PIPs.",
+    "on_chain_tips": "On Chain Tips",
+    "on_chain_tips_desc": "This is the place to discuss on-chain tips. Tip posts are automatically generated as soon as they are created on-chain. Only the proposer is able to edit them.",
+    "polkassembly_end_user_agreement": "Polkassembly End User Agreement",
+    "company_registration": "Premiurly OÜ is a company registered in Estonia under company number 16162207 with its registered office at Tornimäe tn 7, Kesklinna linnaosa, Tallinn,Harju maakond, 10145",
+    "company": "Company",
+    "the_company_operates_polkassembly_the": "The Company operates Polkassembly the",
+    "the": "the",
+    "forum": "Forum",
+    "website": "Website",
+    "understanding_these_terms": "Understanding these terms",
+    "point_one": "This end user agreement (the **Terms**) describes how you may access and use the Forum and any services made available through the Forum via the Website,any mobile. applications made available by the Company and any other distribution channels made available by the Company (the **Services**). By accessing the Forum, these Terms will apply to you and you agree to the Terms. You should therefore read the terms carefully before using the forum.",
+    "point_two": "When certain words and phrases are used in these Terms, they have specific meanings (these are known as **defined terms**). You can identify these defined terms because they start with capital letters (even if they are not at the start of a sentence). Where a defined term is used, it has the meaning given to it in the section of these Terms where it was defined (you can find these meanings by looking at the sentence where the defined term is included in brackets and speech marks).",
+    "treasury_proposals": "Treasury Proposals",
+    "treasury_proposals_desc": "This is the place to discuss on-chain treasury proposals. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "guidelines_of_the_interim_treasury": "Guidelines of the Interim Treasury."
 
 }
