feat: string to json ui components

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -88,6 +88,193 @@
     "point_two": "When certain words and phrases are used in these Terms, they have specific meanings (these are known as **defined terms**). You can identify these defined terms because they start with capital letters (even if they are not at the start of a sentence). Where a defined term is used, it has the meaning given to it in the section of these Terms where it was defined (you can find these meanings by looking at the sentence where the defined term is included in brackets and speech marks).",
     "treasury_proposals": "Treasury Proposals",
     "treasury_proposals_desc": "This is the place to discuss on-chain treasury proposals. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
-    "guidelines_of_the_interim_treasury": "Guidelines of the Interim Treasury."
-
+    "guidelines_of_the_interim_treasury": "Guidelines of the Interim Treasury.",
+    "beneficiary": "Beneficiary",
+    "more" : "more",
+    "go_to_home": "Go to Home",
+    "predictions": "Predictions",
+    "prediction": "Prediction",
+    "predict": "Predict",
+    "yes": "Yes",
+    "switch_to": "Switch to",
+    "connect_your_address": "Connect your Address",
+    "select_your_address": "Select your Address",
+    "link_address": "Link Address",
+    "next": "Next",
+    "confirm": "Confirm",
+    "linking_an_address": "Linking an address allows you to create proposals, edit their descriptions, add tags as well as submit updates regarding the proposal to the rest of the community",
+    "select_a_wallet": "Select a wallet",
+    "or": "Or",
+    "free_balance_msg": "The Free Balance in your selected account is less than the Minimum Deposit",
+    "required_to_create_a_transaction": "required to create a Transaction.",
+    "for_using": "For using",
+    "give_access_to_polkassembly_on_your_selected_wallet": "Give access to Polkassembly on your selected wallet",
+    "add_an_address_to_the_selected_wallet": "Add an address to the selected wallet.",
+    "please_select_a_wallet": "Please select a wallet.",
+    "please_maintain_minimum": "Please maintain minimum",
+    "balance_for_these_transactions": "balance for these transactions:",
+    "preimage_creation": "Preimage Creation",
+    "proposal_submission": "Proposal Submission",
+    "note": "Note",
+    "switch_wallet": "If you switch wallet, all votes in cart will be made from the latest selected wallet only",
+    "wallet_not_found": "Wallet not found",
+    "signer_not_available": "Signer not available",
+    "invalid_address": "Invalid Address!",
+    "something_went_wrong": "Something went wrong",
+    "no_web3_account": "No web 3 account integration could be found. To be able to use this feature, visit this page on a computer with polkadot-js extension.",
+    "login_with_web3": "Please login with a web3 wallet to access this feature.",
+    "show": "Show",
+    "hide": "Hide",
+    "switch_wallet_text": "Switch Wallet",
+    "multi": "Multi",
+    "character_limit_reached": "Character limit reached",
+    "tags_left": "Tags left",
+    "add_new_tag": "Add new tag",
+    "press_enter_to_add_new_tag": "Press enter to add new tag.",
+    "no_tag_found": "No tag found.",
+    "aye": "Aye",
+    "nay": "Nay",
+    "back_to": "Back to",
+    "invalid_balance": "Invalid Balance",
+    "to_add_socials_to_your_delegate_profile": "To add socials to your delegate profile",
+    "set_identity": "Set identity",
+    "with_polkassembly": "With Polkassembly", 
+    "your_address": "Your Address",
+    "edit": "edit",
+    "transaction_failed": "Transaction failed",
+    "transaction_successful": "Transaction Successful!",
+    "success": "Success!",
+    "awaiting_confirmation": "Awaiting Confirmation!",
+    "claim_payouts": "Claim Payouts",
+    "cancel": "Cancel",
+    "claim": "Claim",
+    "insufficient_available_balance": "Insufficient available balance",
+    "change_wallet": "Change Wallet",
+    "index": "Index",
+    "amount": "Amount",
+    "expire_in": "Expire In",
+    "gas_fee_of": "Gas fee of",
+    "will_be_required": "will be required",
+    "claim_payout": "Claim Payout",
+    "if_you": "If you",
+    "reach_out": "d like to enable search and super search for your chain, please reach out to us on",
+    "show_less": "Show less",
+    "show_more": "Show more",
+    "comment_edit_history": "comment_edit_history",
+    "completely_against": "Completely Against",
+    "completely_for": "Completely For",
+    "slightly_against": "Slightly Against",
+    "slightly_for": "Slightly For",
+    "neutral": "Neutral",
+    "done": "Done",
+    "thank_you_for_commenting_on_the_post": "Thank you for commenting on the post.",
+    "move_the_slider_to_add_your_sentiment_towards_the_discussion": "Move the slider to add your sentiment towards the discussion.",
+    "confirmation_attempts": "Confirmation Attempts",
+    "number_of_times_proposal_entered_confirmation_period_as_both_support_approval_were_greater_than_threshold": "Number of times proposal entered confirmation period as both support & approval were greater than threshold",
+    "failed_to_load_social_media_data_Please_try_again_later": "Failed to load social media data. Please try again later.",
+    "check_out_this_proposal_here": "Check out this proposal here:",
+    "link_and_message_copied_to_clipboard": "Link and message copied to clipboard!",
+    "failed_to_copy_link_to_clipboard_Please_try_again": "Failed to copy link to clipboard. Please try again.",
+    "confusion_everywhere": "Confusion everywhere, It's a Menance!",
+    "add_message": "Add a message",
+    "confused_about_making_a_decision": "Confused about making a decision?",
+    "share_proposal": "Share proposal",
+    "with_a_friend_to_get_their_opinion": "with a friend to get their opinion!",
+    "proposer": "Proposer!",
+    "in": "in",
+    "IPFS": "IPFS",
+    "voted": "Voted",
+    "voted_aye": "Voted_Aye",
+    "voted_nay": "Voted_nay",
+    "voted_split": "Voted_split",
+    "voted_abstain": "Voted_abstain",
+    "votes": "Votes",
+    "this_comment_is_imported_from": "This comment is imported from",
+    "subsquare": "Subsquare",
+    "status": "Status",
+    "clear_filter": "Clear Filters",
+    "tags": "Tags",
+    "suggestions": "Suggestions: ",
+    "no_tags_found": "No tag found.",
+    "qoute": "Qoute",
+    "share": "Share",
+    "disbursed": "Disbursed",
+    "remaining": "Remaining",
+    "you_are_successfully_logged_in": "You are successfully logged in",
+    "enter_username": "Enter username",
+    "you_can_update_your_username_from_the_profile_page": "You can update your username from the profile page.",
+    "username_already_exists_please_try_again": "Username already exists. Please try again",
+    "skip": "Skip",
+    "add_your_email": "Add your email",
+    "set_password": "Set Password",
+    "you_can_set_your_email_later_from_the_settings_page.": "You can set your email later from the settings page.",
+    "email_already_exists": "Email already exists. Please use a different email or link your address with the existing account.",
+    "choose_linked_multisig_account": "Choose linked multisig account",
+    "available": "Available",
+    "no_multisig_account_found": "No multisig account found.",
+    "please_integrate_a_multisig_account_or_change_your_address_to_create_a_multisig_account_please_visit": "Please integrate a multisig account or change your address. To create a multisig account, please visit",
+    "polkasafe": "Polkasafe",
+    "to_create_or_manage_your_multisig_account": "to create or manage your multisig account.",
+    "polkadot": "Polkadot",
+    "parachains": "Parachains",
+    "kusama": "Kusama",
+    "solo_chains": "Solo Chains",
+    "test_chains": "Test Chains",
+    "network": "Network",
+    "edited_on": "Edited on",
+    "see_details": "See Details",
+    "by": "By",
+    "proposal_edit_history": "Proposal Edit History",
+    "no_bio_added": "No bio added",
+    "account_since": "Account Since",
+    "proposals": "Proposals",
+    "discussions": "Discussions",
+    "voting_power": "Voting Power",
+    "create_referendum": "Create Referendum",
+    "create_referendum_across_any_track": "Create a referendum across any track",
+    "cancel_referendum": "Cancel Referendum",
+    "cancel_referendum_return": "Cancel a referendum and return the deposit",
+    "kill_referendum": "Kill Referendum",
+    "cancel_referendum_slash": "Cancel a referendum and slash the deposit",
+    "create_proposal": "Create Proposal",
+    "proxy_address": "Proxy Address",
+    "since": "Since",
+    "judgements": "Judgements",
+    "tip": "Tip",
+    "signup": "singup",
+    "search": "Search",
+    "clear_filters": "Clear Filter", 
+    "sort_by": "Sort By",
+    "this_post_could_be_a_spam": "This post could be a spam.",
+    "flagged_by": "Flagged by",
+    "users": "users",
+    "select_gifs": "Select GIF",
+    "get_alerts": "Get Alerts for the governance events you are interested in!",
+    "set_notifications": "Set Notifications",
+    "loading": "Loading",
+    "refresh": "Refresh",
+    "no_result": "We couldn't find any",
+    "edited": "Edited",
+    "we_have_assigned_you_a_temporary_username": "We have assigned you a temporary username",
+    "you_can_visit": "You can visit",
+    "profile": "Profile",
+    "and_change_it_anytime": "and change it anytime",
+    "vote_details": "Vote Details",
+    "delegator": "Delegator",
+    "vote_casted_by": "Vote Casted by",
+    "self_votes": "Self Votes",
+    "conviction": "Conviction",
+    "capital": "Capital",
+    "delegation_votes": "Delegation Votes",
+    "delegators": "Delegators",
+    "delegation": "Delegation",
+    "split": "Split",
+    "split_abstain": "Split Abstain",
+    "vote_progress_antd_pie": "VoteProgressAntdPie",
+    "your_vote_has_been_cleared_successfully": "Your Vote has been Cleared successfully.",
+    "please_change_to": "Please change to",
+    "select_addresses": "Select Addresses",
+    "view_subscan": "View Subscan",
+    "view_vote": "View Vote",
+    "no_vote_found": "No Vote Found"
 }
