--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -1,3 +1,218 @@
 {
-    "overview": "Overview"
+    "overview": "Overview",
+    "activity_feed": "Activity Feed",
+    "advisory_council_members": "Advisory Council Members",
+    "waiting_for_block_confirmation": "Waiting for Block Confirmation",
+    "usually_its_done_within_a_few_seconds": "Usually its done within a few seconds",
+    "all_referenda": "All Referenda",
+    "alliance": "Alliance",
+    "alliance_desc": "The Alliance Pallet provides a collective that curates a list of accounts and URLs, deemed by the voting members to be unscrupulous actors. The Alliance provides a set of ethics against bad behavior and provides recognition and influence for those teams that contribute something back to the ecosystem.",
+    "announcement": "Announcement",
+    "alliance_motions": "Alliance Motions",
+    "motions_desc": "This is the place to discuss on-chain motions. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "motions": "Motions",
+    "astrals_scoresheet": "Astrals Scoresheet",
+    "see_how_you_can_earn_more_points": "See how you can earn more points!",
+    "cart_page": "Cart Page",
+    "copy_page_link": "Copy Page Link",
+    "back_to_bounties": "Back to Bounties",
+    "on_chain_bounties": "On Chain Bounties",
+    "on_chain_child_bounties": "On Chain Child Bounties",
+    "bounties_desc": "This is the place to discuss on-chain bounties. Bounty posts are automatically generated as soon as they are created on-chain. Only the proposer is able to edit them.",
+    "child_bounties_desc": "This is the place to discuss on-chain child bounties. Child Bounty posts are automatically generated as soon as they are created on-chain. Only the proposer is able to edit them.",
+    "back_to_bounty_dashboard": "Back to Bounty Dashboard",
+    "404": "404",
+    "post_not_found": "Post not found. If you just created a post, it might take up to a minute to appear.",
+    "on-chain_upgrade_PIPs": "On-chain Upgrade PIPs",
+    "PIPs_desc": "This is the place to discuss on-chain Upgrade PIPs. Upgrade Committee PIPs are proposed by the Upgrade Committee and approved by the Polymesh Governance Council. Only the Upgrade Committee can amend these PIPs",
+    "on_chain_community_pips": "On-chain Community PIPs",
+    "on_chain_community_pips_desc": "This is the place to discuss on-chain Community PIPs. Community PIPs are proposed by the Community and approved by the Polymesh Governance Council. Only the Community can amend these PIPs",
+    "council": "Council",
+    "council_desc": "Council is the body of elected members that consists of several on-chain accounts. The Council can act as a representative for passive (non-voting) stakeholders. Council members have two main tasks: proposing referenda for the overall stakeholder group to vote on and cancelling malicious referenda.",
+    "latest_discussions": "Latest Discussions",
+    "add_post": "Add Post",
+    "discussion_desc": "Discussions is a space for the community to engage in meaningful conversations around on-chain proposals. It’s a space to share insights, provide feedback, and collaborate on ideas that impact the network. On-chain posts are automatically generated as soon as a proposal is created, and only the proposer can edit the original details. Join the conversation and help shape the future of the ecosystem.",
+    "fellowship": "Fellowship",
+    "fellowship_desc": "Fellowship is a mostly self-governing expert body with a primary goal of representing the humans who embody and contain the technical knowledge base of the Polkadot network and protocol.",
+    "governance_analytics": "Governance Analytics",
+    "gov_Analytics_desc": "All active and history referenda of various tracks.",
+    "grants_discussion": "Grants Discussion",
+    "this_is_the_place_to_discuss_grants_for": "This is the place to discuss grants for",
+    "anyone_can_start_a_new_grants_discussion": "Anyone can start a new grants discussion.",
+    "guidelines_of_the_interim_grants_program": "Guidelines of the Interim Grants Program.",
+    "leaderboard": "Leaderboard",
+    "find_your_rank_in": "Find your rank in",
+    "ecosystem": "Ecoystem",
+    "beta": "BETA",
+    "open_tech_committee_members": "Open Tech Committee Members",
+    "open_tech_committee_desc": "Open Tech Committee Members is a mostly self-governing expert body with a primary goal of representing the humans who embody and contain the technical knowledge base of the Polkadot network and protocol.",
+    "on_chain_motions": "On Chain Motions",
+    "on_chain_motions_desc": "This is the place to discuss on-chain motions. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "on_chain_proposals": "On Chain Proposals",
+    "on_chain_proposals_desc": "This is the place to discuss on-chain proposals. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "on_chain_referenda": "On Chain Referenda",
+    "on_chain_referenda_desc": "This is the place to discuss on-chain referenda. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "news": "News",
+    "notifications": "Notifications",
+    "please": "Please",
+    "login": "login",
+    "to_use_notifications": "to use notifications",
+    "please_enable_notifications_via": "Please enable notifications via",
+    "settings": "settings",
+    "page": "page",
+    "polkadot_and_Kusama_ecosystem_and_directory": "Polkadot and Kusama ecosystem and directory",
+    "projects": "Projects",
+    "preimage": "Preimage",
+    "show_All": "Show All",
+    "request_password_reset": "Request Password Reset",
+    "email": "Email",
+    "set_new_password": "Set new password",
+    "new_password": "New Password",
+    "password_reset_token_and_or_userId_missing": "Password reset token and/or userId missing",
+    "please_login_to_change_settings": "Please login to change settings",
+    "tech_committee_proposals": "Tech Committee Proposals",
+    "tech_committee_proposals_desc": "This is the place to discuss on-chain technical committee proposals. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "on_chain_tech_committee_pips": "On-chain Technical Committee PIPs",
+    "on_chain_tech_committee_pips_desc": "This is the place to discuss on-chain Technical PIPs. Technical Committee PIPs are proposed by the Technical Committee and approved by the Polymesh Governance Council. Only the Technical Committee can amend these PIPs.",
+    "on_chain_tips": "On Chain Tips",
+    "on_chain_tips_desc": "This is the place to discuss on-chain tips. Tip posts are automatically generated as soon as they are created on-chain. Only the proposer is able to edit them.",
+    "polkassembly_end_user_agreement": "Polkassembly End User Agreement",
+    "company_registration": "Premiurly OÜ is a company registered in Estonia under company number 16162207 with its registered office at Tornimäe tn 7, Kesklinna linnaosa, Tallinn,Harju maakond, 10145",
+    "company": "Company",
+    "the_company_operates_polkassembly_the": "The Company operates Polkassembly the",
+    "the": "the",
+    "forum": "Forum",
+    "website": "Website",
+    "understanding_these_terms": "Understanding these terms",
+    "point_one": "This end user agreement (the **Terms**) describes how you may access and use the Forum and any services made available through the Forum via the Website,any mobile. applications made available by the Company and any other distribution channels made available by the Company (the **Services**). By accessing the Forum, these Terms will apply to you and you agree to the Terms. You should therefore read the terms carefully before using the forum.",
+    "point_two": "When certain words and phrases are used in these Terms, they have specific meanings (these are known as **defined terms**). You can identify these defined terms because they start with capital letters (even if they are not at the start of a sentence). Where a defined term is used, it has the meaning given to it in the section of these Terms where it was defined (you can find these meanings by looking at the sentence where the defined term is included in brackets and speech marks).",
+    "treasury_proposals": "Treasury Proposals",
+    "treasury_proposals_desc": "This is the place to discuss on-chain treasury proposals. On-chain posts are automatically generated as soon as they are created on the chain. Only the proposer is able to edit them.",
+    "guidelines_of_the_interim_treasury": "Guidelines of the Interim Treasury.",
+    "beneficiary": "Beneficiary",
+    "more" : "more",
+    "go_to_home": "Go to Home",
+    "predictions": "Predictions",
+    "prediction": "Prediction",
+    "predict": "Predict",
+    "yes": "Yes",
+    "switch_to": "Switch to",
+    "connect_your_address": "Connect your Address",
+    "select_your_address": "Select your Address",
+    "link_address": "Link Address",
+    "next": "Next",
+    "confirm": "Confirm",
+    "linking_an_address": "Linking an address allows you to create proposals, edit their descriptions, add tags as well as submit updates regarding the proposal to the rest of the community",
+    "select_a_wallet": "Select a wallet",
+    "or": "Or",
+    "free_balance_msg": "The Free Balance in your selected account is less than the Minimum Deposit",
+    "required_to_create_a_transaction": "required to create a Transaction.",
+    "for_using": "For using",
+    "give_access_to_polkassembly_on_your_selected_wallet": "Give access to Polkassembly on your selected wallet",
+    "add_an_address_to_the_selected_wallet": "Add an address to the selected wallet.",
+    "please_select_a_wallet": "Please select a wallet.",
+    "please_maintain_minimum": "Please maintain minimum",
+    "balance_for_these_transactions": "balance for these transactions:",
+    "preimage_creation": "Preimage Creation",
+    "proposal_submission": "Proposal Submission",
+    "note": "Note",
+    "switch_wallet": "If you switch wallet, all votes in cart will be made from the latest selected wallet only",
+    "wallet_not_found": "Wallet not found",
+    "signer_not_available": "Signer not available",
+    "invalid_address": "Invalid Address!",
+    "something_went_wrong": "Something went wrong",
+    "no_web3_account": "No web 3 account integration could be found. To be able to use this feature, visit this page on a computer with polkadot-js extension.",
+    "login_with_web3": "Please login with a web3 wallet to access this feature.",
+    "show": "Show",
+    "hide": "Hide",
+    "switch_wallet_text": "Switch Wallet",
+    "multi": "Multi",
+    "character_limit_reached": "Character limit reached",
+    "tags_left": "Tags left",
+    "add_new_tag": "Add new tag",
+    "press_enter_to_add_new_tag": "Press enter to add new tag.",
+    "no_tag_found": "No tag found.",
+    "aye": "Aye",
+    "nay": "Nay",
+    "back_to": "Back to",
+    "invalid_balance": "Invalid Balance",
+    "to_add_socials_to_your_delegate_profile": "To add socials to your delegate profile",
+    "set_identity": "Set identity",
+    "with_polkassembly": "With Polkassembly", 
+    "your_address": "Your Address",
+    "edit": "edit",
+    "transaction_failed": "Transaction failed",
+    "transaction_successful": "Transaction Successful!",
+    "success": "Success!",
+    "awaiting_confirmation": "Awaiting Confirmation!",
+    "claim_payouts": "Claim Payouts",
+    "cancel": "Cancel",
+    "claim": "Claim",
+    "insufficient_available_balance": "Insufficient available balance",
+    "change_wallet": "Change Wallet",
+    "index": "Index",
+    "amount": "Amount",
+    "expire_in": "Expire In",
+    "gas_fee_of": "Gas fee of",
+    "will_be_required": "will be required",
+    "claim_payout": "Claim Payout",
+    "if_you": "If you",
+    "reach_out": "d like to enable search and super search for your chain, please reach out to us on",
+    "show_less": "Show less",
+    "show_more": "Show more",
+    "comment_edit_history": "comment_edit_history",
+    "completely_against": "Completely Against",
+    "completely_for": "Completely For",
+    "slightly_against": "Slightly Against",
+    "slightly_for": "Slightly For",
+    "neutral": "Neutral",
+    "done": "Done",
+    "thank_you_for_commenting_on_the_post": "Thank you for commenting on the post.",
+    "move_the_slider_to_add_your_sentiment_towards_the_discussion": "Move the slider to add your sentiment towards the discussion.",
+    "confirmation_attempts": "Confirmation Attempts",
+    "number_of_times_proposal_entered_confirmation_period_as_both_support_approval_were_greater_than_threshold": "Number of times proposal entered confirmation period as both support & approval were greater than threshold",
+    "failed_to_load_social_media_data_Please_try_again_later": "Failed to load social media data. Please try again later.",
+    "check_out_this_proposal_here": "Check out this proposal here:",
+    "link_and_message_copied_to_clipboard": "Link and message copied to clipboard!",
+    "failed_to_copy_link_to_clipboard_Please_try_again": "Failed to copy link to clipboard. Please try again.",
+    "confusion_everywhere": "Confusion everywhere, It's a Menance!",
+    "add_message": "Add a message",
+    "confused_about_making_a_decision": "Confused about making a decision?",
+    "share_proposal": "Share proposal",
+    "with_a_friend_to_get_their_opinion": "with a friend to get their opinion!",
+    "proposer": "Proposer!",
+    "in": "in",
+    "IPFS": "IPFS",
+    "voted": "Voted",
+    "voted_aye": "Voted_Aye",
+    "voted_nay": "Voted_nay",
+    "voted_split": "Voted_split",
+    "voted_abstain": "Voted_abstain",
+    "votes": "Votes",
+    "this_comment_is_imported_from": "This comment is imported from",
+    "subsquare": "Subsquare",
+    "status": "Status",
+    "clear_filter": "Clear Filters",
+    "tags": "Tags",
+    "suggestions": "Suggestions: ",
+    "no_tags_found": "No tag found.",
+    "qoute": "Qoute",
+    "share": "Share",
+    "disbursed": "Disbursed",
+    "remaining": "Remaining",
+    "you_are_successfully_logged_in": "You are successfully logged in",
+    "enter_username": "Enter username",
+    "you_can_update_your_username_from_the_profile_page": "You can update your username from the profile page.",
+    "username_already_exists_please_try_again": "Username already exists. Please try again",
+    "skip": "Skip",
+    "add_your_email": "Add your email",
+    "set_password": "Set Password",
+    "you_can_set_your_email_later_from_the_settings_page.": "You can set your email later from the settings page.",
+    "email_already_exists": "Email already exists. Please use a different email or link your address with the existing account.",
+    "choose_linked_multisig_account": "Choose linked multisig account",
+    "available": "Available",
+    "no_multisig_account_found": "No multisig account found.",
+    "please_integrate_a_multisig_account_or_change_your_address_to_create_a_multisig_account_please_visit": "Please integrate a multisig account or change your address. To create a multisig account, please visit",
+    "polkasafe": "Polkasafe",
+    "to_create_or_manage_your_multisig_account": "to create or manage your multisig account."
 }
