fix: added src hardcoded strings

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -277,5 +277,136 @@
     "view_subscan": "View Subscan",
     "view_vote": "View Vote",
     "remove_vote": "Remove Vote",
-    "no_vote_found": "No Vote Found"
+    "no_vote_found": "No Vote Found",
+    "members_heading": "Members",
+    "create_discussion_post": "Create Discussion Post",
+	"report_an_issue": "Report An Issue",
+	"menu": "Menu",
+	"join_polkassembly": "Join Polkassembly to Start a New Discussion.",
+	"discussion_contribute_get_updates": "Discuss, contribute and get regular updates from Polkassembly.",
+    "who_can_comment": "Who can comment",
+	"choose_who_can_comment": "Choose who can comment and reply to this post",
+	"all_users": "All Users",
+	"verified_identities": "Verified Identities",
+	"disable_comments": "Disable Comments",
+    "value_on_day_of_txn": "Value on day of txn:",
+	"current_value": "Current value:",
+	"value_on_day_of_creation": "Value on day of creation:",
+    "wallet": "Wallet",
+	"extension_not_detected": "extension not detected.",
+	"no_web3_account_integration": "No web 3 account integration could be found. To be able to vote on-chain, visit this page on a computer with polkadot-js extension.",
+	"install_browser": "Please install Firefox or Chrome browser to use this feature.",
+    "rate": "Rate",
+    "see_more": "See More",
+    "ended": "ended",
+    "deciding_ends_in": "Deciding ends in",
+    "spam_warning": "This post could be a spam.",
+    "rate_delivery_of_progress_report": "Rate Delivery of Progress Report",
+    "other_proposals_by": "Other Proposals by",
+    "democracy_proposals": "Democracy Proposals",
+    "untitled": "Untitled",
+    "no_other_proposals_found": "No other proposals found",
+    "hash": "Hash",
+    "author": "Author",
+    "deposit": "Deposit",
+    "arguments": "Arguments",
+    "size": "Size",
+    "copy_success": "Hash copied to clipboard",
+    "preimage_cleared_success": "Preimage Cleared Successfully",
+    "preimage_failed": "Transaction failed.",
+    "refund_card_clicked": "Refund card clicked",
+    "decision_deposit_card_clicked": "Decision deposit card clicked",
+    "add_tags_card_clicked": "Add tags card clicked",
+    "link_description_card_clicked": "Link description card clicked",
+    "add_description_card_clicked": "Add description card clicked",
+    "refund_success_message": "Refund successfully processed",
+    "refund_fail_message": "Transaction failed",
+    "add_progress_report": "Add Progress Report",
+    "place_deposit_description": "Place refundable deposit to prevent proposal from timing out",
+    "link_discussion_description": "Add contextual info for voters",
+    "refund_deposit_description": "Click to refund the deposit",
+    "add_tags_description": "Include relevant tags to enhance post discoverability",
+    "preimage_cleared_successfully": "Preimage Cleared Successfully",
+    "unrequest": "Unrequest",
+    "unnote": "Unnote",
+    "close_icon": "Close Icon",
+    "copy": "Copy",
+    "hash_copied_to_clipboard": "Hash copied to clipboard",
+    "close": "Close",
+    "refund_success": "Refund successfully processed",
+    "refund_description": "Click here to refund the deposit for this proposal",
+    "decision_deposit_description": "Place refundable deposit within 14 days to prevent proposal from timing out.",
+    "progress_report_description": "Your proposal is past the deadline, please add a progress report.",
+    "add_description_description": "Please add contextual info for voters to make an informed decision",
+    "details": "Details",
+    "please_add_title": "Please add the title.",
+    "title": "Title",
+    "your_title": "Your title...",
+    "comment_created_successfully": "Comment created successfully.",
+  "please_add_name": "Please add the '${name}'",
+  "timer": "timer",
+  "untitled_post": "Untitled Post",
+  "commenting_on_proposal": "Commenting on proposal",
+  "post": "Post",
+   "comment_placeholder": "Type your comment here",
+  "post_label": "Post",
+  "features": "Features",
+  "delegate_your_vote": "Delegate your vote and catch up with Delegation Dashboard",
+  "delegation_dashboard": "Delegation Dashboard",
+  "vote_on_top_proposals": "Vote on top proposals in a single transaction",
+  "batch_voting": "Batch Voting",
+  "create_manage_participate_bounties": "Create, Manage and Participate in Bounties",
+  "bounties": "Bounties",
+  "set_identity_desc": "Set identity with Polkassembly at 1/4th of the cost",
+  "identity": "Identity",
+  "on_chain_identity": "On-chain identity",
+  "please_use_desktop": "Please use your desktop computer to verify on-chain identity",
+  "liked": "Liked",
+  "disliked": "Disliked",
+  "like": "Like",
+  "dislike": "Dislike",
+  "comment": "Comment",
+  "no_reactions_yet": "No reactions yet",
+  "join_to_like": "Join Polkassembly to Like this proposal.",
+  "join_to_dislike": "Join Polkassembly to Dislike this proposal.",
+  "join_to_comment": "Join Polkassembly to Comment on this proposal.",
+  "join_subtitle": "Discuss, contribute and get regular updates from Polkassembly.",
+  "read_more": "Read More",
+  "cast_vote": "Cast Vote",
+  "cast_vote_again": "Cast Vote Again",
+  "join_polkassembly_to_vote": "Join Polkassembly to Vote on this proposal.",
+  "discuss_contribute_get_updates": "Discuss, contribute and get regular updates from Polkassembly.",
+  "no_content_fallback": "No content available for this post.",
+  "empty_state_alt": "empty state",
+  "youre_all_caught_up": "You're all caught up!",
+  "explore_other_categories": "Why not explore other categories or topics?",
+  "has_liked_this_post": "has liked this post",
+  "others": "others",
+  "liked_this_post": "liked this post",
+  "dislikes": "dislikes",
+  "comments": "Comments",
+  "user_picture": "User Picture",
+  "voted_proposals": "Voted Proposals",
+  "last_15_days": "Last 15 days",
+  "out_of": "out of",
+  "active_proposals": "active proposals",
+  "rank": "Rank",
+  "to_see_your_rank": "to see your rank",
+  "user_rank_not_found": "User rank not found.",
+  "username_not_available": "Username is not available",
+  "share_icon": "Share icon",
+  "tracks": "Tracks",
+  "treasury": "Treasury",
+  "price": "Price",
+  "next_burn": "Next Burn",
+  "explore": "Explore",
+  "subscribed": "Subscribed",
+  "sign_up": "Sign Up",
+  "all_caught_up": "You're all caught up!",
+  "no_activity_found": "No Activity Found",
+  "follow_or_subscribe": "Follow or Subscribe to people and posts to view personalized content on your feed!",
+  "join_polkassembly_follow": "Join Polkassembly to see your Following tab!",
+  "discuss_contribute": "Discuss, contribute and get regular updates from Polkassembly.",
+  "empty_state": "Empty State"
+  
 }
