--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -407,6 +407,43 @@
   "follow_or_subscribe": "Follow or Subscribe to people and posts to view personalized content on your feed!",
   "join_polkassembly_follow": "Join Polkassembly to see your Following tab!",
   "discuss_contribute": "Discuss, contribute and get regular updates from Polkassembly.",
-  "empty_state": "Empty State"
-  
+  "empty_state": "Empty State",
+  "exit_ambassador_proposal_creation": "Exit Ambassador Proposal Creation",
+  "exit_ambassador_warning": "Your ambassador proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit proposal creation process?",
+  "yes_exit": "Yes, Exit",
+  "no_continue_editing": "No, Continue Editing",
+  "applicant_address": "Applicant Address",
+  "enter_applicant_address": "Enter Applicant Address",
+  "promote_rank": "Promote Rank",
+  "promote_rank_tooltip": "This indicates at what rank you would like to promote yourself",
+  "exit_warning_message": "Your ambassador proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit the proposal creation process?",
+  "remove_who": "Remove (Who)",
+  "enter_removal_address": "Enter Removal Address",
+  "create_ambassador_application": "Create Ambassador Application",
+  "remove_ambassador": "Remove Ambassador",
+  "remove_ambassador_description": "Remove a current Head Ambassador",
+  "replace_ambassador": "Replace Ambassador",
+  "replace_ambassador_description": "Replace a current Head Ambassador",
+  "view_proposal": "View Proposal",
+  "preimage_created_successfully": "Preimage created successfully!",
+  "proposal_created_successfully": "Proposal created successfully!",
+  "preimage_hash_copied": "Preimage hash copied to clipboard",
+  "proposer_address": "Proposer Address",
+  "removing_address": "Removing Address",
+  "gas_fees_description": "Gas Fees of {{gasFee}} {{unit}} will be applied to create preimage.",
+  "base_deposit_required": "{{baseDeposit}} {{unit}} Base deposit is required to create a preimage.",
+  "failed": "Failed!",
+  "back": "Back",
+  "create_preimage": "Create Preimage",
+  "description": "Description",
+  "add_tags": "Add Tags",
+  "write_a_proposal": "Write a Proposal",
+  "title_max_chars": "Title should not exceed 150 characters.",
+  "required_field_message": "Please add the '{{name}}'",
+  "error": "Error",
+  "submit_proposal": "Submit Proposal",
+  "allowed_commentors": "Allowed Commenters",
+  "all": "All",
+  "admins_only": "Admins Only",
+  "contributors_only": "Contributors Only"
 }
