fix: added some files

--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -343,107 +343,134 @@
     "title": "Title",
     "your_title": "Your title...",
     "comment_created_successfully": "Comment created successfully.",
-  "please_add_name": "Please add the '${name}'",
-  "timer": "timer",
-  "untitled_post": "Untitled Post",
-  "commenting_on_proposal": "Commenting on proposal",
-  "post": "Post",
-   "comment_placeholder": "Type your comment here",
-  "post_label": "Post",
-  "features": "Features",
-  "delegate_your_vote": "Delegate your vote and catch up with Delegation Dashboard",
-  "delegation_dashboard": "Delegation Dashboard",
-  "vote_on_top_proposals": "Vote on top proposals in a single transaction",
-  "batch_voting": "Batch Voting",
-  "create_manage_participate_bounties": "Create, Manage and Participate in Bounties",
-  "bounties": "Bounties",
-  "set_identity_desc": "Set identity with Polkassembly at 1/4th of the cost",
-  "identity": "Identity",
-  "on_chain_identity": "On-chain identity",
-  "please_use_desktop": "Please use your desktop computer to verify on-chain identity",
-  "liked": "Liked",
-  "disliked": "Disliked",
-  "like": "Like",
-  "dislike": "Dislike",
-  "comment": "Comment",
-  "no_reactions_yet": "No reactions yet",
-  "join_to_like": "Join Polkassembly to Like this proposal.",
-  "join_to_dislike": "Join Polkassembly to Dislike this proposal.",
-  "join_to_comment": "Join Polkassembly to Comment on this proposal.",
-  "join_subtitle": "Discuss, contribute and get regular updates from Polkassembly.",
-  "read_more": "Read More",
-  "cast_vote": "Cast Vote",
-  "cast_vote_again": "Cast Vote Again",
-  "join_polkassembly_to_vote": "Join Polkassembly to Vote on this proposal.",
-  "discuss_contribute_get_updates": "Discuss, contribute and get regular updates from Polkassembly.",
-  "no_content_fallback": "No content available for this post.",
-  "empty_state_alt": "empty state",
-  "youre_all_caught_up": "You're all caught up!",
-  "explore_other_categories": "Why not explore other categories or topics?",
-  "has_liked_this_post": "has liked this post",
-  "others": "others",
-  "liked_this_post": "liked this post",
-  "dislikes": "dislikes",
-  "comments": "Comments",
-  "user_picture": "User Picture",
-  "voted_proposals": "Voted Proposals",
-  "last_15_days": "Last 15 days",
-  "out_of": "out of",
-  "active_proposals": "active proposals",
-  "rank": "Rank",
-  "to_see_your_rank": "to see your rank",
-  "user_rank_not_found": "User rank not found.",
-  "username_not_available": "Username is not available",
-  "share_icon": "Share icon",
-  "tracks": "Tracks",
-  "treasury": "Treasury",
-  "price": "Price",
-  "next_burn": "Next Burn",
-  "explore": "Explore",
-  "subscribed": "Subscribed",
-  "sign_up": "Sign Up",
-  "all_caught_up": "You're all caught up!",
-  "no_activity_found": "No Activity Found",
-  "follow_or_subscribe": "Follow or Subscribe to people and posts to view personalized content on your feed!",
-  "join_polkassembly_follow": "Join Polkassembly to see your Following tab!",
-  "discuss_contribute": "Discuss, contribute and get regular updates from Polkassembly.",
-  "empty_state": "Empty State",
-  "exit_ambassador_proposal_creation": "Exit Ambassador Proposal Creation",
-  "exit_ambassador_warning": "Your ambassador proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit proposal creation process?",
-  "yes_exit": "Yes, Exit",
-  "no_continue_editing": "No, Continue Editing",
-  "applicant_address": "Applicant Address",
-  "enter_applicant_address": "Enter Applicant Address",
-  "promote_rank": "Promote Rank",
-  "promote_rank_tooltip": "This indicates at what rank you would like to promote yourself",
-  "exit_warning_message": "Your ambassador proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit the proposal creation process?",
-  "remove_who": "Remove (Who)",
-  "enter_removal_address": "Enter Removal Address",
-  "create_ambassador_application": "Create Ambassador Application",
-  "remove_ambassador": "Remove Ambassador",
-  "remove_ambassador_description": "Remove a current Head Ambassador",
-  "replace_ambassador": "Replace Ambassador",
-  "replace_ambassador_description": "Replace a current Head Ambassador",
-  "view_proposal": "View Proposal",
-  "preimage_created_successfully": "Preimage created successfully!",
-  "proposal_created_successfully": "Proposal created successfully!",
-  "preimage_hash_copied": "Preimage hash copied to clipboard",
-  "proposer_address": "Proposer Address",
-  "removing_address": "Removing Address",
-  "gas_fees_description": "Gas Fees of {{gasFee}} {{unit}} will be applied to create preimage.",
-  "base_deposit_required": "{{baseDeposit}} {{unit}} Base deposit is required to create a preimage.",
-  "failed": "Failed!",
-  "back": "Back",
-  "create_preimage": "Create Preimage",
-  "description": "Description",
-  "add_tags": "Add Tags",
-  "write_a_proposal": "Write a Proposal",
-  "title_max_chars": "Title should not exceed 150 characters.",
-  "required_field_message": "Please add the '{{name}}'",
-  "error": "Error",
-  "submit_proposal": "Submit Proposal",
-  "allowed_commentors": "Allowed Commenters",
-  "all": "All",
-  "admins_only": "Admins Only",
-  "contributors_only": "Contributors Only"
+    "please_add_name": "Please add the '${name}'",
+    "timer": "timer",
+    "untitled_post": "Untitled Post",
+    "commenting_on_proposal": "Commenting on proposal",
+    "post": "Post",
+    "comment_placeholder": "Type your comment here",
+    "post_label": "Post",
+    "features": "Features",
+    "delegate_your_vote": "Delegate your vote and catch up with Delegation Dashboard",
+    "delegation_dashboard": "Delegation Dashboard",
+    "vote_on_top_proposals": "Vote on top proposals in a single transaction",
+    "batch_voting": "Batch Voting",
+    "create_manage_participate_bounties": "Create, Manage and Participate in Bounties",
+    "bounties": "Bounties",
+    "set_identity_desc": "Set identity with Polkassembly at 1/4th of the cost",
+    "identity": "Identity",
+    "on_chain_identity": "On-chain identity",
+    "please_use_desktop": "Please use your desktop computer to verify on-chain identity",
+    "liked": "Liked",
+    "disliked": "Disliked",
+    "like": "Like",
+    "dislike": "Dislike",
+    "comment": "Comment",
+    "no_reactions_yet": "No reactions yet",
+    "join_to_like": "Join Polkassembly to Like this proposal.",
+    "join_to_dislike": "Join Polkassembly to Dislike this proposal.",
+    "join_to_comment": "Join Polkassembly to Comment on this proposal.",
+    "join_subtitle": "Discuss, contribute and get regular updates from Polkassembly.",
+    "read_more": "Read More",
+    "cast_vote": "Cast Vote",
+    "cast_vote_again": "Cast Vote Again",
+    "join_polkassembly_to_vote": "Join Polkassembly to Vote on this proposal.",
+    "discuss_contribute_get_updates": "Discuss, contribute and get regular updates from Polkassembly.",
+    "no_content_fallback": "No content available for this post.",
+    "empty_state_alt": "empty state",
+    "youre_all_caught_up": "You're all caught up!",
+    "explore_other_categories": "Why not explore other categories or topics?",
+    "has_liked_this_post": "has liked this post",
+    "others": "others",
+    "liked_this_post": "liked this post",
+    "dislikes": "dislikes",
+    "comments": "Comments",
+    "user_picture": "User Picture",
+    "voted_proposals": "Voted Proposals",
+    "last_15_days": "Last 15 days",
+    "out_of": "out of",
+    "active_proposals": "active proposals",
+    "rank": "Rank",
+    "to_see_your_rank": "to see your rank",
+    "user_rank_not_found": "User rank not found.",
+    "username_not_available": "Username is not available",
+    "share_icon": "Share icon",
+    "tracks": "Tracks",
+    "treasury": "Treasury",
+    "price": "Price",
+    "next_burn": "Next Burn",
+    "explore": "Explore",
+    "subscribed": "Subscribed",
+    "sign_up": "Sign Up",
+    "all_caught_up": "You're all caught up!",
+    "no_activity_found": "No Activity Found",
+    "follow_or_subscribe": "Follow or Subscribe to people and posts to view personalized content on your feed!",
+    "join_polkassembly_follow": "Join Polkassembly to see your Following tab!",
+    "discuss_contribute": "Discuss, contribute and get regular updates from Polkassembly.",
+    "empty_state": "Empty State",
+    "exit_ambassador_proposal_creation": "Exit Ambassador Proposal Creation",
+    "exit_ambassador_warning": "Your ambassador proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit proposal creation process?",
+    "yes_exit": "Yes, Exit",
+    "no_continue_editing": "No, Continue Editing",
+    "applicant_address": "Applicant Address",
+    "enter_applicant_address": "Enter Applicant Address",
+    "promote_rank": "Promote Rank",
+    "promote_rank_tooltip": "This indicates at what rank you would like to promote yourself",
+    "exit_warning_message": "Your ambassador proposal information (Title, Description & Tags) would be lost. Are you sure you want to exit the proposal creation process?",
+    "remove_who": "Remove (Who)",
+    "enter_removal_address": "Enter Removal Address",
+    "create_ambassador_application": "Create Ambassador Application",
+    "remove_ambassador": "Remove Ambassador",
+    "remove_ambassador_description": "Remove a current Head Ambassador",
+    "replace_ambassador": "Replace Ambassador",
+    "replace_ambassador_description": "Replace a current Head Ambassador",
+    "view_proposal": "View Proposal",
+    "preimage_created_successfully": "Preimage created successfully!",
+    "proposal_created_successfully": "Proposal created successfully!",
+    "preimage_hash_copied": "Preimage hash copied to clipboard",
+    "proposer_address": "Proposer Address",
+    "removing_address": "Removing Address",
+    "gas_fees_description": "Gas Fees of {{gasFee}} {{unit}} will be applied to create preimage.",
+    "base_deposit_required": "{{baseDeposit}} {{unit}} Base deposit is required to create a preimage.",
+    "failed": "Failed!",
+    "back": "Back",
+    "create_preimage": "Create Preimage",
+    "description": "Description",
+    "add_tags": "Add Tags",
+    "write_a_proposal": "Write a Proposal",
+    "title_max_chars": "Title should not exceed 150 characters.",
+    "required_field_message": "Please add the '{{name}}'",
+    "error": "Error",
+    "submit_proposal": "Submit Proposal",
+    "allowed_commentors": "Allowed Commenters",
+    "all": "All",
+    "admins_only": "Admins Only",
+    "contributors_only": "Contributors Only",
+    "site_footer": "Site Footer",
+    "help_center": "Help Center",
+    "footer_about_nav": "Footer About Nav",
+    "report_issue": "Report an Issue",
+    "feedback": "Feedback",
+    "terms_and_conditions": "Terms and Conditions",
+    "our_services": "Our Services",
+    "footer_services_nav": "Footer Services Nav",
+    "docs": "Docs",
+    "terms_of_website": "Terms of Website",
+    "privacy_policy": "Privacy Policy",
+    "commons_initiative": "A House of Commons Initiative.",
+    "all_rights_reserved": "All rights reserved.",
+    "open_gov": "OpenGov",
+    "governance_v1": "Governance V1",
+    "close_nav": "Close Navigation",
+    "open_nav": "Open Navigation",
+    "delegation_empty_state_icon": "Delegation Empty State Icon",
+    "use_desktop_to_verify": "Please use your desktop computer to verify on chain identity",
+    "view_profile": "View Profile",
+  "logout": "Logout",
+  "set_on_chain_identity": "Set on-chain identity",
+  "remove_identity": "Remove Identity",
+  "townhall": "Townhall",
+  "staking": "Staking",
+  "free_balance": "Free Balance",
+  "transferable_balance": "Transferable Balance"
 }
